 - System information page now attempts to determine if there are sufficient mysql privileges for normal operation (warning only on failure).
 - Ensure all tags in list tags get help.
 - re-organized the copycontent template to make it look a bit more logical.
 - Adding two new methods to Stylesheetoperations. DeleteStylesheetByName() and LoadStylesheetByName()
 
Core - Bug Reports:
 - #6161 Core Printing Module - Compression issue
 - #7740 HTML entities in the language string aren't getting converted back when sending the email during install

Core - Feature Requests:


Core - General:
 - Adds new front end theme "Simplex"


Core - Installer:
  - mysqli option now selected by default.
  - Add checks for xml handling.

CMSMailer:


MenuManager:
- Added the {cms_breadcrumbs} action (which is templatable).  deprecates {breadcrumbs}
- Fixes #7306 - haschildren always fals
- Adds the action=items capability.
- Adds new Template for Simplex Theme
	

MicroTiny:
 - Two new preferences to assist in managing stylesheet and other background settings.
 - #7223 (fixes for secure admin).

News:
 - All routes are now registered statically
 - The {news} plugin is now part of the News module
 - The detail page now handles caching well.
 - The detail page now throws a 404 exception for attempts to view expired/draft articles.
 - Full lazyload is now supported.
 - Now supports smarty caching
 - optimization of code to minimize queries (preload field data for summary views).
 - begin more oopification.
 - Generates 404 errors if routed to an invalid article, or an article that is expired/draft.
 - Fixes #7713 - Apply button doesn't work.
 - Fixes #7457 - Duplicate news url
 - Adds detailtemplate param capabilities to SearchResultWithParams
 - Access to the Categories and custom fields tab is now controlled by the 'Modify Site Preferences' permission.
 - Adds sample HTML5 summary and detail tempaltes for Simplex Theme

Search: 
 - Moved "Stop Words" to language file